# libat86rf212

./: .gitignore  CMakeLists.txt  README.md  version.py
lib/: at86rf212.cmake
lib/at86rf212/: at86rf212.h  at86rf212.hpp  at86rf212_defs.h  at86rf212_if.hpp  at86rf212_regs.h
lib/source/: at86rf212.c  at86rf212_arm.c
test/include/: mock_spi.hpp
test/source/: at86rf212test.cpp  usbthing_bindings.c
util/include/: usbthing_bindings.h
util/source/: main.cpp  usbthing_bindings.c
